Add GitHub Actions

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,10 @@ services:
     build:
       context: .
       args:
-        - DEV=true
+        - DEV=true 
     ports:
       - "8000:8000"
     volumes:
       - ./app:/app
     command: >
-      sh -c "python manage.py runservice 0.0.0.0:8000"
+      sh -c "python manage.py runserver 0.0.0.0:8000"
