change db docker service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,14 +23,13 @@ services:
       - db
 
   db:
-    image: postgres:alpine3.17
+    image: postgres:13-alpine
     volumes:
       - dev-db-data:/var/lib/postgresql/data
-    environment: 
+    environment:
       - POSTGRES_DB=devdb
       - POSTGRES_USER=devuser
       - POSTGRES_PASSWORD=changeme
-
 
 volumes:
   dev-db-data:
